@@ -1,3 +1,9 @@
+2010-10-13 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V02-02-07
+	* exitOnError added for slave processes
+	* latch inconsistent subprocess state to avoid flooding sentinel
+
 2010-06-14 Andrea Bocci <andrea.bocci@cern.ch>
 
 	* tag V02-02-06-02
